Updated YAML and refactor the code
